Bug 463923 - kaccounts-integration not working after 22.12.0-1 on Arch Linux
Summary: kaccounts-integration not working after 22.12.0-1 on Arch Linux
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-06 12:03 UTC by lakesarchive
Modified: 2023-01-08 20:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12.2
Sentry Crash Report:


Attachments
It looks like you haven't installed the instant messaging configuration module. Please install the kaccounts-integration package. (39.72 KB, image/png)
2023-01-06 12:03 UTC, lakesarchive
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lakesarchive 2023-01-06 12:03:05 UTC
Created attachment 155072 [details]
It looks like you haven't installed the instant messaging configuration module. Please install the kaccounts-integration package.

SUMMARY

After upgrading KDE Desktop, I can't start to configure accounts, and there are sometimes DBus errors related to online accounts occur. Configuring accounts will show this error:
"It looks like you haven't installed the instant messaging configuration module. Please install the kaccounts-integration package."
However, the kaccounts-integration is present. Downgrading to 22.08 and earlier will fix the problem.

This is partly transferred from https://bugs.archlinux.org/task/76814 ; The DBus errors are phenomenons experienced by me.

STEPS TO REPRODUCE
1. Right click on the applet "Instant messaging" 
2. Click "Configure"
3. The error pops out

OBSERVED RESULT
An error "It looks like you haven't installed the instant messaging configuration module. Please install the kaccounts-integration package." pops out. After closing it, the Online Accounts tab is absent. Also, the kcm module's title left untranslated.

EXPECTED RESULT
No errors pop out, Online Accounts tab translated and present.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux (rolling)
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Comment 2 Bug Janitor Service 2023-01-07 19:43:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktp-common-internals/-/merge_requests/3
Comment 3 Alexander Lohnau 2023-01-08 20:09:34 UTC
Git commit 804c22c5abdf3492387f6a7c71c76f58625a3f80 by Alexander Lohnau.
Committed on 08/01/2023 at 20:08.
Pushed by alex into branch 'master'.

Adjust to move of kaccounts KCM

M  +9    -5    KTp/Widgets/settings-kcm-dialog.cpp

https://invent.kde.org/network/ktp-common-internals/commit/804c22c5abdf3492387f6a7c71c76f58625a3f80
Comment 4 Alexander Lohnau 2023-01-08 20:11:10 UTC
Git commit c0e93c796b3f9779f36f115853fa4b93961a4c99 by Alexander Lohnau.
Committed on 08/01/2023 at 20:11.
Pushed by alex into branch 'release/22.12'.

Adjust to move of kaccounts KCM


(cherry picked from commit 804c22c5abdf3492387f6a7c71c76f58625a3f80)

M  +9    -5    KTp/Widgets/settings-kcm-dialog.cpp

https://invent.kde.org/network/ktp-common-internals/commit/c0e93c796b3f9779f36f115853fa4b93961a4c99