Adjust to move of kaccounts KCM

BUG: 463923